# docs/swagger.json
@@ -13,40 +13,6 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/dashboard": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKey": []
-                    }
-                ],
-                "description": "Route Path for Get List of Questionnaire.",
-                "tags": [
-                    "Questionnaire"
-                ],
-                "summary": "Get All Questionnaire",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.MessageOnly"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.MessageOnly"
-                        }
-                    },
-                    "417": {
-                        "description": "Expectation Failed",
-                        "schema": {
-                            "$ref": "#/definitions/response.Error"
-                        }
-                    }
-                }
-            }
-        },
         "/login": {
             "post": {
                 "description": "Login and get Authorization Token",
@@ -307,18 +273,18 @@
                 }
             }
         },
-        "/questionnaire": {
+        "/quest": {
             "get": {
                 "security": [
                     {
                         "ApiKey": []
                     }
                 ],
-                "description": "Route Path for Get List of Questionnaire.",
+                "description": "Route Path for Get List of Quest By User ID.",
                 "tags": [
                     "Questionnaire"
                 ],
-                "summary": "Get All Questionnaire",
+                "summary": "Get All Quest",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -352,7 +318,7 @@
                         "ApiKey": []
                     }
                 ],
-                "description": "Route Path for Insert New Questionnaire.",
+                "description": "Route Path for Insert New Quest.",
                 "consumes": [
                     "application/json"
                 ],
@@ -362,10 +328,10 @@
                 "tags": [
                     "Questionnaire"
                 ],
-                "summary": "Create New Questionnaire",
+                "summary": "Create New Quest",
                 "parameters": [
                     {
-                        "description": "send request questionnaire code and questionnaire name",
+                        "description": "send quest data",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -402,18 +368,35 @@
                 }
             }
         },
-        "/questionnaire/{id}": {
-            "get": {
+        "/quest/answer": {
+            "post": {
                 "security": [
                     {
                         "ApiKey": []
                     }
                 ],
-                "description": "Route Path for Get List of Questionnaire.",
+                "description": "Route Path for Answer Quest.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "Questionnaire"
                 ],
-                "summary": "Get All Questionnaire",
+                "summary": "Answer Quest",
+                "parameters": [
+                    {
+                        "description": "send answer, quest, and user data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.Answer"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -442,14 +425,99 @@
                 }
             }
         },
-        "/questionnaire/{id}/delete": {
+        "/quest/available": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "description": "Route Path for Get List of Quest with User Tag Filter.",
+                "tags": [
+                    "Questionnaire"
+                ],
+                "summary": "Get All Quest with Tag Filter",
+                "parameters": [
+                    {
+                        "description": "send logged in user data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "417": {
+                        "description": "Expectation Failed",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/quest/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "description": "Route Path for Get List of Quest.",
+                "tags": [
+                    "Questionnaire"
+                ],
+                "summary": "Get All Quest",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "417": {
+                        "description": "Expectation Failed",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/quest/{id}/delete": {
             "delete": {
                 "security": [
                     {
                         "ApiKey": []
                     }
                 ],
-                "description": "Route Path for Delete Questionnaire.",
+                "description": "Route Path for Delete Quest.",
                 "consumes": [
                     "application/json"
                 ],
@@ -459,11 +527,11 @@
                 "tags": [
                     "Questionnaire"
                 ],
-                "summary": "Delete Questionnaire",
+                "summary": "Delete Quest",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "questionnaire id",
+                        "description": "quest id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -497,7 +565,47 @@
                 }
             }
         },
-        "/questionnaire/{id}/update": {
+        "/quest/{id}/response": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "description": "Route Path for Get List of Quest.",
+                "tags": [
+                    "Questionnaire"
+                ],
+                "summary": "Get All Quest",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "417": {
+                        "description": "Expectation Failed",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/quest/{id}/update": {
             "put": {
                 "security": [
                     {
@@ -518,13 +626,13 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "questionnaire id",
+                        "description": "quest id",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "send request questionnaire code and questionnaire name",
+                        "description": "send quest data",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -1348,6 +1456,12 @@
                 "questionnaire_id": {
                     "type": "integer"
                 },
+                "user_response": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.UserAnswer"
+                    }
+                },
                 "with_option": {
                     "type": "integer"
                 }
@@ -1492,6 +1606,40 @@
                 }
             }
         },
+        "models.UserAnswer": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "question_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "request.Answer": {
+            "type": "object",
+            "properties": {
+                "answers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/request.UserAnswer"
+                    }
+                },
+                "quest": {
+                    "$ref": "#/definitions/models.Questionnaire"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                }
+            }
+        },
         "request.LoginRequest": {
             "type": "object",
             "properties": {
@@ -1500,6 +1648,20 @@
                 },
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "request.UserAnswer": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "question_id": {
+                    "type": "integer"
                 }
             }
         },
