# internal/core/models/request/AnswerRequest.go
@@ -2,8 +2,14 @@ package request
 
 import "go-question-board/internal/core/models"
 
+type UserAnswer struct {
+	ID uint `json:"id" gorm:"primarykey"`
+	Answer string `json:"answer"`
+	QuestionID uint `json:"question_id"`
+}
+
 type Answer struct {
-	Questionnaire models.Questionnaire	`json:"questionnaire"`
-	Answer []models.UserAnswer	`json:"answer"`
+	Questionnaire models.Questionnaire	`json:"quest"`
+	Answer []UserAnswer	`json:"answers"`
 	User models.User `json:"user"`
 }
