# internal/framework/routes/QuestionnaireRoutes.go
@@ -8,11 +8,12 @@ import (
 
 func NewQuestionnaireRoutes(e *echo.Echo, ucon *controller.QuestionnaireController, middleware ...echo.MiddlewareFunc) {
 	group := e.Group("/quest", middleware...)
-	group.GET("", ucon.ListMyQuestionnaire)
-	group.GET("/available", ucon.AvailableQuest)
+	group.GET("", ucon.MyQuest)
+	group.GET("/available", ucon.QuestForMe)
 	group.GET("/:id", ucon.ViewQuestByID)
 	group.GET("/:id/response", ucon.ViewQuestResponse)
-	group.POST("", ucon.CreateQuestionnaire)
-	group.PUT("/:id/update", ucon.UpdateQuestionnaire)
-	group.DELETE("/:id/delete", ucon.DeleteQuestionnaire)
+	group.POST("", ucon.CreateQuest)
+	group.POST("/answer", ucon.QuestAnswer)
+	group.PUT("/:id/update", ucon.UpdateQuest)
+	group.DELETE("/:id/delete", ucon.DeleteQuest)
 }
